# cpp-lib-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
include/: mylib.hpp
notebooks/: main.py
notebooks/__marimo__/session/: main.py.json
python/mylib/: __init__.py
src/: mylib.cpp  python.cpp
tests/: mylib_test.cpp  test.py
